[B170111-001]修改自动下载逻辑